[gd_scene load_steps=3 format=2]

[ext_resource path="res://turn_component/battlefield_view/test_harness.gd" type="Script" id=1]
[ext_resource path="res://turn_component/battlefield_view/battlefield_view.gd" type="Script" id=2]

[node name="TestHarness" type="Node"]

script = ExtResource( 1 )

[node name="BattlefieldView" type="Node" parent="." index="0"]

script = ExtResource( 2 )
unit_rep_scene = "res://turn_component/battlefield_view/unit_rep.tscn"
cmd_rep_scene = "res://turn_component/battlefield_view/cmd_rep.tscn"

[node name="HBoxContainer" type="HBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 10
alignment = 1
_sections_unfolded = [ "Margin", "custom_constants" ]

[node name="TestButton1" type="Button" parent="HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 395.0
margin_right = 446.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Test 1"
flat = false
align = 1

[node name="TestButton2" type="Button" parent="HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 456.0
margin_right = 507.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Test 2"
flat = false
align = 1

[node name="TestButton3" type="Button" parent="HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 517.0
margin_right = 568.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Test 3"
flat = false
align = 1

[node name="TestButton4" type="Button" parent="HBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 578.0
margin_right = 629.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Test 4"
flat = false
align = 1

[node name="Node2D" type="Node2D" parent="." index="2"]

position = Vector2( 815.218, 541.432 )
_sections_unfolded = [ "Transform" ]

[connection signal="pressed" from="HBoxContainer/TestButton1" to="." method="test_1"]

[connection signal="pressed" from="HBoxContainer/TestButton2" to="." method="test_2"]

[connection signal="pressed" from="HBoxContainer/TestButton3" to="." method="test_3"]

[connection signal="pressed" from="HBoxContainer/TestButton4" to="." method="test_4"]


